[package]
name = "hc128"
version = "0.1.3"
authors = ["quininer kel <quininer@live.com>"]
description = "A implementation of HC-128 stream cipher. support `no_std` environment."
repository = "https://github.com/Tyzzer/hc128"
license = "MIT"

[dependencies]
byteorder = { version = "0.5", default-features = false }

[dev-dependencies]
rust-crypto = "0.2"
